feat: add room services (half)